<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_id" />

    <TextView
        android:id="@+id/tv_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_first_name" />

    <TextView
        android:id="@+id/tv_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_last_name" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_email" />

    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_mobile" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_password" />

    <TextView
        android:id="@+id/tv_created_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_created_at" />

    <TextView
        android:id="@+id/tv_updated_at"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_updated_at" />

    <TextView
        android:id="@+id/tv_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_url" />

</LinearLayout>